create: connect normalize.scss

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,8 @@
 // Подключение переменных
-@import  '_variables.sass'
+@import  '_variables.sass'x
 // Подключение базовых настроек
 @import '_settings.sass'
+// Подключение normalize
+@import '_normalize.scss'
 // Стили для блока header
 @import 'blocks/_header.sass'
