create: styles for header

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,5 @@
 // Подключение переменных
-@import  '_variables.sass'x
+@import  '_variables.sass'
 // Подключение базовых настроек
 @import '_settings.sass'
 // Подключение normalize
