create: responsive tablet for header

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -6,6 +6,26 @@
     justify-content: space-between
     padding-top: 40px
     padding-bottom: 40px
+  &-bottom
+    background-color: $dark
+  &-menu
+    list-style-type: none
+    margin: 0
+    padding: 31px 0
+    display: flex
+    align-items: center
+    justify-content: space-between
+    
+    
+    &__link
+      color: $light
+      text-decoration: none
+      text-transform: uppercase
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 18px;
+.logo
+  width: 177px
 .search
   display: flex
   position: relative
