--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,11 +10,7 @@
     &-top
       padding-top: 30px
       padding-bottom: 30px
-    &__search
-      margin-left: auto
-      
     &-menu
-      
       padding-top: 22px
       padding-bottom: 22px
       &__link
@@ -48,9 +44,34 @@
         width: 16px
         height: 1px
         background-color: $text-color
+  .stars
+    flex-basis: 50%
+    text-align: right
+  .hotel
+    &-name
+      flex-basis: 100%
+    &-wrapper
+      justify-content: space-between
+    &-info
+      &__text
+        width: 100%
+      &__name
+        margin-top: 10px
+        margin-bottom: 0
+      &__description
+        margin: 5px 0
+      &__rating
+        display: none
+      &__offer
+        order: -1
+        margin-left: 0
 @media  ( max-width: 576px )
-.logo
-  width: 99px
+  .logo
+    width: 99px
+@media  ( max-width: 320px )
+  .container
+    max-width: 280px
+
   
         
 
