--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,5 +6,9 @@
 @import '_normalize.scss'
 // Стили для блока header
 @import 'blocks/_header.sass'
+// Хлебные крошки
+@import 'blocks/_breadcrumb.sass'
+//Стили блока Отель
+@import 'blocks/_hotel.sass'
 //Подключение стилей для адаптива 
 @import '_media.sass'
