--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,14 @@
 @media ( max-width:1200px  )
   .container
     max-width: 960px
+  .slider
+    width: 590px
+  .swiper
+    &-slide
+      &__img
+        width: 100%
+        height: 100%
+        object-fit: cover
 @media  ( max-width: 992px )
   .container
     max-width: 700px
@@ -19,6 +27,20 @@
   .search
     &__input
       width: 340px
+  .hotel
+    &-grid
+      flex-direction: column
+    &__slider
+      margin-bottom: 30px
+    &-right
+      flex-direction: row
+  .booking
+    width: 340px
+  .map
+    width: 340px
+   
+  .slider
+    width: 100%
 
 @media ( max-width: 768px )
   .container
@@ -65,12 +87,28 @@
       &__offer
         order: -1
         margin-left: 0
+  .slider
+    height: 350px
+  .hotel
+    &-right
+      flex-direction: column
+      min-height: 450px
+  .booking
+    width: 100%
+  .map
+    width: 100%
+
 @media  ( max-width: 576px )
   .logo
     width: 99px
+  .slider
+    height: 250px
 @media  ( max-width: 320px )
   .container
     max-width: 280px
+  .hotel
+    &__slider
+      margin-button: 20px
 
   
         
