--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -60,7 +60,7 @@
     line-height: 18px
 .swiper-container 
   width: 100%
-  height: 450px
+  height: 100%
   position: relative
   border-radius: 8px
   &::after //песевдоэлемент
@@ -77,6 +77,7 @@
     z-index: 10
 .slider
   width: 728px
+  height: 450px
   &-button
     position: absolute
     top: 50% //опустить на 50% от блока 
@@ -173,7 +174,8 @@
 .map
   width: 347px
   height: 213px
-  border-radius: 4px
+  border-radius: 10px
+  overflow: hidden
 
     
     
