create: added newsletter & settings

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,7 +10,8 @@
         height: 100%
         object-fit: cover
 @media  ( max-width: 992px )
-  .container
+  .container, 
+  .newsletter-wrapper
     max-width: 700px
   .logo
     width: 132px
@@ -97,12 +98,29 @@
     width: 100%
   .map
     width: 100%
+  .newsletter
+    &-wrapper
+      flex-direction: column
+      max-width: 576px
+      width: 92%
+      align-items: flex-start
 
 @media  ( max-width: 576px )
   .logo
     width: 99px
   .slider
     height: 250px
+  .newsletter
+    padding: 76px 0 83px 0
+    &-title
+      font-size: 20px
+      line-height: 25px
+      margin-bottom: 5px
+      &__strong
+        font-size: 30px
+        line-height: 38px
+        margin-bottom: 37px
+    
 @media  ( max-width: 320px )
   .container
     max-width: 280px
