--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'blocks/_breadcrumb.sass'
 //Стили блока Отель
 @import 'blocks/_hotel.sass'
+//Подключение блока подписки
+@import 'blocks/_newsletter.sass'
 //Подключение стилей для адаптива 
 @import '_media.sass'
