create: added reviews section and fixed hotel slider

--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -5,6 +5,7 @@
   background-repeat: no-repeat
   background-position: center
   background-size: cover //изображение должно подстраиваться по размеру
+  background-attachment: fixed //прокрутка фона
   &::before //псевдо элемент для фоновой заливки
     content: ''
     position: absolute
