--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import 'blocks/_hotel.sass'
 //Подключение блока подписки
 @import 'blocks/_newsletter.sass'
+//стили для отзывов
+@import 'blocks/_reviews.sass'
 //Подключение стилей для адаптива 
 @import '_media.sass'
