--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -23,9 +23,9 @@
       color: $light
       text-decoration: none
       text-transform: uppercase
-      font-weight: bold;
-      font-size: 14px;
-      line-height: 18px;
+      font-weight: bold
+      font-size: 14px
+      line-height: 18px
 .logo
   width: 177px
 .search
