--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -32,6 +32,49 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+  &-slider
+    width: 728px
+    height: 450px
+    &__item
+      width: 100%
+      height: 100%
+      position: relative
+      border-radius: 8px
+      overflow: hidden
+      &::after //песевдоэлемент
+        content: ''
+        position: absolute
+        width: 100% //относительно
+        height: 100% 
+        //растянуть на весь блок
+        top: 0 
+        bottom: 0
+        right: 0
+        left: 0
+        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+        z-index: 10
+    &__button
+      position: absolute
+      top: 50% //опустить на 50% от блока 
+      transform: translateY(-50%) //на половину высоты корректирует обратно
+      z-index: 99 //вывести вперед 
+      width: 30px
+      height: 30px
+      border: none
+      cursor: pointer
+      background-color: transparent
+      &--next
+        right: 18px // кнопку next к правому краю
+        background-image: url(../img/arrow-next.svg)
+        background-repeat: no-repeat
+        background-position: center
+        background-size: 10px
+      &--prev
+        left: 18px
+        background-image: url(../img/arrow-prev.svg)
+        background-repeat: no-repeat
+        background-position: center
+        background-size: 10px
 
 .stars
   flex-basis: 100%
@@ -58,48 +101,7 @@
     font-weight: bold
     font-size: 14px
     line-height: 18px
-.swiper-container 
-  width: 100%
-  height: 100%
-  position: relative
-  border-radius: 8px
-  &::after //песевдоэлемент
-    content: ''
-    position: absolute
-    width: 100% //относительно
-    height: 100% 
-    //растянуть на весь блок
-    top: 0 
-    bottom: 0
-    right: 0
-    left: 0
-    background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
-    z-index: 10
-.slider
-  width: 728px
-  height: 450px
-  &-button
-    position: absolute
-    top: 50% //опустить на 50% от блока 
-    transform: translateY(-50%) //на половину высоты корректирует обратно
-    z-index: 99 //вывести вперед 
-    width: 30px
-    height: 30px
-    border: none
-    cursor: pointer
-    background-color: transparent
-    &--next
-      right: 18px // кнопку next к правому краю
-      background-image: url(../img/arrow-next.svg)
-      background-repeat: no-repeat
-      background-position: center
-      background-size: 10px
-    &--prev
-      left: 18px
-      background-image: url(../img/arrow-prev.svg)
-      background-repeat: no-repeat
-      background-position: center
-      background-size: 10px
+
 .booking
   background-color: $dark
   color: $light
