--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,14 +1,17 @@
 @media ( max-width:1200px  )
   .container
     max-width: 960px
-  .slider
-    width: 590px
-  .swiper
-    &-slide
+
+    
+  .hotel
+    &-slider
+      width: 590px
       &__img
         width: 100%
         height: 100%
         object-fit: cover
+ 
+        
 @media  ( max-width: 992px )
   .container, 
   .newsletter-wrapper
@@ -35,17 +38,22 @@
       margin-bottom: 30px
     &-right
       flex-direction: row
+    &-slider
+      width: 100%
   .booking
     width: 340px
   .map
     width: 340px
    
-  .slider
-    width: 100%
+  
+  .reviews
+    &-slider
+      &__item
+        max-width: 580px
 
 @media ( max-width: 768px )
   .container
-    max-width: 700px
+    max-width: 576px
     width: 92%
   .navbar
     &__search, &-menu, &__user
@@ -88,12 +96,13 @@
       &__offer
         order: -1
         margin-left: 0
-  .slider
-    height: 350px
+  
   .hotel
     &-right
       flex-direction: column
       min-height: 450px
+    &-slider
+      height: 350px
   .booking
     width: 100%
   .map
@@ -104,12 +113,31 @@
       max-width: 576px
       width: 92%
       align-items: flex-start
+  .reviews
+    &-slider
+      &__item
+        padding: 0 30px 30px
+        &::after, &::before
+          display: none
+      &__button
+        top: 32px
+        &--prev
+          left: 50% //сдвиг от левого края родителя
+          margin-left: -65px 
+          transform: translate(-50%, 0) //отцентрировать кнопку
+        &--next
+          right: 50%
+          margin-right: -65px
+          transform: translate(50%, 0)
 
 @media  ( max-width: 576px )
   .logo
     width: 99px
-  .slider
-    height: 250px
+  .hotel
+    &__slider
+      margin-bottom: 20px
+    &-slider
+      height: 250px
   .newsletter
     padding: 76px 0 83px 0
     &-title
