create: added activities section

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,6 +10,9 @@
         width: 100%
         height: 100%
         object-fit: cover
+  .card
+    width: 230px
+    height: 230px
  
         
 @media  ( max-width: 992px )
@@ -44,12 +47,20 @@
     width: 340px
   .map
     width: 340px
-   
-  
   .reviews
     &-slider
       &__item
         max-width: 580px
+  .activities
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px
+    
+  .card
+    width: 340px
+    height: 250px
+    
 
 @media ( max-width: 768px )
   .container
@@ -129,6 +140,13 @@
           right: 50%
           margin-right: -65px
           transform: translate(50%, 0)
+  .activities
+    padding-top: 40px
+    padding-bottom: 60px
+
+  .card
+    width: 49%
+    height: 255px
 
 @media  ( max-width: 576px )
   .logo
@@ -148,6 +166,9 @@
         font-size: 30px
         line-height: 38px
         margin-bottom: 37px
+
+  .card
+    width: 100%
     
 @media  ( max-width: 320px )
   .container
