--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'blocks/_newsletter.sass'
 //стили для отзывов
 @import 'blocks/_reviews.sass'
+//стили для развлечений
+@import 'blocks/_activities.sass'
 //Подключение стилей для адаптива 
 @import '_media.sass'
