create: added footer section

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,11 +10,13 @@
 @import 'blocks/_breadcrumb.sass'
 //Стили блока Отель
 @import 'blocks/_hotel.sass'
-//Подключение блока подписки
+//Подключение блока Подписки
 @import 'blocks/_newsletter.sass'
 //стили для отзывов
 @import 'blocks/_reviews.sass'
 //стили для развлечений
 @import 'blocks/_activities.sass'
+//стили для Подвала
+@import 'blocks/_footer.sass'
 //Подключение стилей для адаптива 
 @import '_media.sass'
