--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,8 @@
 @import 'blocks/_breadcrumb.sass'
 //Стили блока Отель
 @import 'blocks/_hotel.sass'
+//Подключение блока Другие пакеты
+@import 'blocks/_packages.sass'
 //Подключение блока Подписки
 @import 'blocks/_newsletter.sass'
 //стили для отзывов
