--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -17,8 +17,6 @@
     display: flex
     align-items: center
     justify-content: space-between
-    
-    
     &__link
       color: $light
       text-decoration: none
@@ -26,6 +24,10 @@
       font-weight: bold
       font-size: 14px
       line-height: 18px
+    &__item
+      &--mobile
+        &_visible
+          display: none
 .logo
   width: 177px
 .search
@@ -66,6 +68,7 @@
     font-size: 14px
     line-height: 18px
     color: $text-color
+
     
     
     
