--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -11,6 +11,27 @@ body
 img
   max-width: 100%
 
+.input
+  background-color: $light
+  border-radius: 4px
+  border: none
+  padding: 0 23px
+  height: 50px
+.message
+  background-color: $light
+  border-radius: 4px
+  padding: 18px 23px
+  border: none
 .button
-  &--primary
+  min-width: 160px
+  min-height: 50px
+  padding: 18px
+  font-style: normal
+  font-weight: bold
+  font-size: 12px
+  line-height: 15px
+  color: $light
+  background-color: $primary
+  border: none
+  border-radius: 4px
     
