--- a/sass/style.sass
+++ b/sass/style.sass
@@ -19,5 +19,7 @@
 @import 'blocks/_activities.sass'
 //стили для Подвала
 @import 'blocks/_footer.sass'
+//стили для Модального окна
+@import 'blocks/_modal.sass'
 //Подключение стилей для адаптива 
 @import '_media.sass'
