--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -7,7 +7,7 @@ body
   color: $text-color
 .container
   max-width: 1110px
-  margin: auto 
+  margin: auto
 img
   max-width: 100%
 
@@ -34,4 +34,6 @@ img
   background-color: $primary
   border: none
   border-radius: 4px
-    
+.invalid
+  color: $primary
+  border-bottom: 1px solid $primary
