--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -21,7 +21,7 @@
       align-items: center
       min-width: 83px
       justify-content: space-between
-      
+
     &-network
       display: flex
       align-content: center
@@ -68,13 +68,15 @@
       min-width: 40px
   &__text
     margin-bottom: 22px
- 
+
   &__link
     text-decoration: none
     color: inherit
   &__input
-    margin-bottom: 15px
-    flex-basis: 48%
+    width: 100%
+    &-group
+      margin-bottom: 15px
+      flex-basis: 48%
   &__message
     flex-basis: 100%
     margin-bottom: 23px
