--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -16,7 +16,7 @@
   &-name
     font-size: 24px
     line-height: 30px
-    
+
   &-wrapper
     display: flex
     flex-wrap: wrap
@@ -27,7 +27,7 @@
   &-grid
     display: flex
     justify-content: space-between
- 
+
   &-right
     display: flex
     flex-direction: column
@@ -45,19 +45,19 @@
         content: ''
         position: absolute
         width: 100% //относительно
-        height: 100% 
+        height: 100%
         //растянуть на весь блок
-        top: 0 
+        top: 0
         bottom: 0
         right: 0
         left: 0
-        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
         z-index: 10
     &__button
       position: absolute
-      top: 50% //опустить на 50% от блока 
+      top: 50% //опустить на 50% от блока
       transform: translateY(-50%) //на половину высоты корректирует обратно
-      z-index: 99 //вывести вперед 
+      z-index: 99 //вывести вперед
       width: 30px
       height: 30px
       border: none
@@ -178,12 +178,7 @@
   height: 213px
   border-radius: 10px
   overflow: hidden
-
-    
-    
-
-      
-
-
-  
-    
+  &__link
+    width: 100%
+    height: 213px
+    border: none
