--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,11 @@ img {
   border-radius: 4px;
 }
 
+.invalid {
+  color: #EC1F46;
+  border-bottom: 1px solid #EC1F46;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -829,6 +834,12 @@ template {
   overflow: hidden;
 }
 
+.map__link {
+  width: 100%;
+  height: 213px;
+  border: none;
+}
+
 .newsletter {
   position: relative;
   padding: 98px 0 87px 0;
@@ -914,7 +925,7 @@ template {
 }
 
 .reviews {
-  padding: 40px 70px;
+  padding: 40px 0 70px 0;
 }
 
 .reviews__title {
@@ -1285,6 +1296,10 @@ template {
 }
 
 .footer__input {
+  width: 100%;
+}
+
+.footer__input-group {
   margin-bottom: 15px;
   -ms-flex-preferred-size: 48%;
       flex-basis: 48%;
@@ -1384,13 +1399,17 @@ template {
 
 .modal__input {
   width: 100%;
-  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .modal__message {
   width: 100%;
   min-height: 123px;
-  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+.modal__button {
+  margin-top: 15px;
 }
 
 .modal__info {
@@ -1418,7 +1437,7 @@ template {
     width: 230px;
     height: 230px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -1441,6 +1460,7 @@ template {
     padding-bottom: 22px;
   }
   .navbar-menu__link {
+    font-size: 12px;
     line-height: 15px;
   }
   .search__input {
@@ -1489,9 +1509,9 @@ template {
         grid-template-columns: repeat(6, 1fr);
     grid-row-gap: 40px;
   }
-  .footer__input {
-    -ms-flex-preferred-size: 49%;
-        flex-basis: 49%;
+  .footer__input-group {
+    -ms-flex-preferred-size: 48%;
+        flex-basis: 48%;
   }
   .footer__logo {
     -ms-grid-row: 1;
@@ -1718,7 +1738,7 @@ template {
     width: 49%;
     height: 255px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -1746,6 +1766,9 @@ template {
     font-size: 30px;
     line-height: 38px;
     margin-bottom: 37px;
+  }
+  .subscribe {
+    max-width: 100%;
   }
   .card {
     width: 100%;
@@ -1781,7 +1804,8 @@ template {
   .footer__legal {
     -ms-grid-row: 5;
     grid-row: 5;
-    grid-colum: 1;
+    -ms-grid-column: 1;
+    grid-column: 1;
   }
   .footer__contact-details {
     -ms-grid-row: 6;
@@ -1792,9 +1816,24 @@ template {
   .footer__contact-form {
     -ms-grid-row: 7;
     grid-row: 7;
-    grid-colum: 1;
+    -ms-grid-column: 1;
+    grid-column: 1;
   }
 }
 
-
+@media (max-width: 320px) {
+  .hotel {
+    padding-bottom: 40px;
+  }
+  .reviews__title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .reviews-slider__text {
+    font-size: 12px;
+    line-height: 160%;
+  }
+}
 /*# sourceMappingURL=style.css.map */
