--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -1,5 +1,5 @@
 .reviews
-  padding: 40px 70px
+  padding: 40px 0 70px 0
   &__title
     font-style: normal
     font-weight: bold
@@ -92,7 +92,3 @@
       text-align: justify
       color: $text-color
       margin: auto
-
-
-
-
